# cookiecutter-basic-jupyter

./: .changelog-config.yaml  CHANGELOG.md  HISTORY.md  Makefile  README.md  TODO.md  cookiecutter.json
.github/: ISSUE_TEMPLATE.md
Development Documentation/: _Readme.Folder.md
hooks/: post_gen_project.py  pre_prompt.py
{{cookiecutter.project_slug}}/: CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  pyproject.toml
